# icecream

./: .travis.yml  CMakeLists.txt  NEWS  README  cmake-config.h.in
Modules/: FindLZO.cmake  FindLibcap-ng.cmake  FindTAR.cmake
client/: CMakeLists.txt  remote.cpp
compilerwrapper/: CMakeLists.txt
daemon/: CMakeLists.txt  environment.cpp
scheduler/: CMakeLists.txt
services/: CMakeLists.txt  comm.cpp  getifaddrs.cpp  logging.cpp
